# libcimpp

./: .gitignore  CMakeLists.txt
cmake/: CIMParserPackaging.cmake  CIMppPackaging.cmake  FindArabica.cmake
doc/: CMakeLists.txt
